Addl granularity in result printing functions
And 25 hyperparameter-varying runs of FBIF including perfect and near-perfect scores

--- a/test_FBIF_auto.ipynb
+++ b/test_FBIF_auto.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "from turtleIsolationForests.FBIF import FBIsolationForest\n",
-    "from turtleIsolationForests.printResults import print_results\n",
+    "from turtleIsolationForests.printResults import print_results, print_by_result, return_results, calc_f1\n",
     "from turtleIsolationForests.preprocessFeatures import preprocess_features"
    ]
   },
@@ -444,14 +444,14 @@
      "text": [
       "Finished building forest\n",
       "Finished calculating threshold\n",
-      "Threshold: 0.3444520124531282\n",
-      "true anomalies: 11566\n",
-      "false anomalies: 1267\n",
-      "false normals: 6075\n",
-      "true normals: 3636\n",
-      "precision: 0.9012701628613731\n",
-      "recall: 0.6556317669066379\n",
-      "f1-score: 0.7590733083940409\n"
+      "Threshold: 0.34868961541961635\n",
+      "true anomalies: 10712\n",
+      "false anomalies: 2121\n",
+      "false normals: 7476\n",
+      "true normals: 2235\n",
+      "precision: 0.8347229798176576\n",
+      "recall: 0.5889597536837475\n",
+      "f1-score: 0.6906289287901743\n"
      ]
     }
    ],
@@ -486,6 +486,341 @@
     "recall: 0.6556317669066379\n",
     "\n",
     "f1-score: 0.7590733083940409"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building forest with hyperparameters c1 = 1.0, c2 = 1.0\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.34148705397255785\n",
+      "true anomalies: 12831\n",
+      "false anomalies: 2\n",
+      "false normals: 5\n",
+      "true normals: 9706\n",
+      "precision: 0.9998441517961506\n",
+      "recall: 0.9996104705515737\n",
+      "f1-score: 0.9997272975184074\n",
+      "Building forest with hyperparameters c1 = 1.0, c2 = 0.9\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.35457044459002235\n",
+      "true anomalies: 12429\n",
+      "false anomalies: 404\n",
+      "false normals: 4625\n",
+      "true normals: 5086\n",
+      "precision: 0.968518662822411\n",
+      "recall: 0.7288026269496892\n",
+      "f1-score: 0.8317328604409944\n",
+      "Building forest with hyperparameters c1 = 1.0, c2 = 0.8\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.3633926403520504\n",
+      "true anomalies: 12833\n",
+      "false anomalies: 0\n",
+      "false normals: 0\n",
+      "true normals: 9711\n",
+      "precision: 1.0\n",
+      "recall: 1.0\n",
+      "f1-score: 1.0\n",
+      "Building forest with hyperparameters c1 = 1.0, c2 = 0.7\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.38946443111122914\n",
+      "true anomalies: 10308\n",
+      "false anomalies: 2525\n",
+      "false normals: 8107\n",
+      "true normals: 1604\n",
+      "precision: 0.8032416426400686\n",
+      "recall: 0.559761064349715\n",
+      "f1-score: 0.6597542242703535\n",
+      "Building forest with hyperparameters c1 = 1.0, c2 = 0.6\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.4012952564341333\n",
+      "true anomalies: 11809\n",
+      "false anomalies: 1024\n",
+      "false normals: 5362\n",
+      "true normals: 4349\n",
+      "precision: 0.9202057196290813\n",
+      "recall: 0.6877293110476967\n",
+      "f1-score: 0.7871617117717639\n",
+      "Building forest with hyperparameters c1 = 1.1, c2 = 1.0\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.33432737558412706\n",
+      "true anomalies: 11275\n",
+      "false anomalies: 1558\n",
+      "false normals: 6222\n",
+      "true normals: 3489\n",
+      "precision: 0.8785942492012779\n",
+      "recall: 0.6443961822026633\n",
+      "f1-score: 0.7434882954170787\n",
+      "Building forest with hyperparameters c1 = 1.1, c2 = 0.9\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.34907037550568604\n",
+      "true anomalies: 11287\n",
+      "false anomalies: 1546\n",
+      "false normals: 6715\n",
+      "true normals: 2996\n",
+      "precision: 0.8795293384243746\n",
+      "recall: 0.6269858904566159\n",
+      "f1-score: 0.7320901572887952\n",
+      "Building forest with hyperparameters c1 = 1.1, c2 = 0.8\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.35137791909212146\n",
+      "true anomalies: 12092\n",
+      "false anomalies: 741\n",
+      "false normals: 6062\n",
+      "true normals: 3649\n",
+      "precision: 0.9422582404737785\n",
+      "recall: 0.6660791010245676\n",
+      "f1-score: 0.7804563203924226\n",
+      "Building forest with hyperparameters c1 = 1.1, c2 = 0.7\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.3678951129573481\n",
+      "true anomalies: 12168\n",
+      "false anomalies: 665\n",
+      "false normals: 5404\n",
+      "true normals: 4307\n",
+      "precision: 0.9481804722200576\n",
+      "recall: 0.6924652856817665\n",
+      "f1-score: 0.8003946719289591\n",
+      "Building forest with hyperparameters c1 = 1.1, c2 = 0.6\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.38398243699422874\n",
+      "true anomalies: 12609\n",
+      "false anomalies: 224\n",
+      "false normals: 3919\n",
+      "true normals: 5792\n",
+      "precision: 0.9825450011688616\n",
+      "recall: 0.7628872216844144\n",
+      "f1-score: 0.8588944518238479\n",
+      "Building forest with hyperparameters c1 = 1.2, c2 = 1.0\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.3196354897139045\n",
+      "true anomalies: 11280\n",
+      "false anomalies: 1553\n",
+      "false normals: 7211\n",
+      "true normals: 2500\n",
+      "precision: 0.8789838697109016\n",
+      "recall: 0.6100264993780758\n",
+      "f1-score: 0.7202145319882518\n",
+      "Building forest with hyperparameters c1 = 1.2, c2 = 0.9\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.32481688534047004\n",
+      "true anomalies: 11208\n",
+      "false anomalies: 1625\n",
+      "false normals: 7104\n",
+      "true normals: 2607\n",
+      "precision: 0.8733733343723213\n",
+      "recall: 0.6120576671035387\n",
+      "f1-score: 0.7197302937871248\n",
+      "Building forest with hyperparameters c1 = 1.2, c2 = 0.8\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.33408013591275443\n",
+      "true anomalies: 11767\n",
+      "false anomalies: 1066\n",
+      "false normals: 6507\n",
+      "true normals: 3204\n",
+      "precision: 0.9169329073482428\n",
+      "recall: 0.6439203239575353\n",
+      "f1-score: 0.7565499726749607\n",
+      "Building forest with hyperparameters c1 = 1.2, c2 = 0.7\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.34585467544232906\n",
+      "true anomalies: 11839\n",
+      "false anomalies: 994\n",
+      "false normals: 6198\n",
+      "true normals: 3513\n",
+      "precision: 0.9225434426868231\n",
+      "recall: 0.6563730110328768\n",
+      "f1-score: 0.7670229996760608\n",
+      "Building forest with hyperparameters c1 = 1.2, c2 = 0.6\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.3659892856127138\n",
+      "true anomalies: 11944\n",
+      "false anomalies: 889\n",
+      "false normals: 5824\n",
+      "true normals: 3887\n",
+      "precision: 0.9307254733889192\n",
+      "recall: 0.6722197208464655\n",
+      "f1-score: 0.7806280840495409\n",
+      "Building forest with hyperparameters c1 = 1.3, c2 = 1.0\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.3000339701531848\n",
+      "true anomalies: 11592\n",
+      "false anomalies: 1241\n",
+      "false normals: 4951\n",
+      "true normals: 4760\n",
+      "precision: 0.9032961895114159\n",
+      "recall: 0.7007193374841323\n",
+      "f1-score: 0.7892156862745099\n",
+      "Building forest with hyperparameters c1 = 1.3, c2 = 0.9\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.3055771607304747\n",
+      "true anomalies: 10381\n",
+      "false anomalies: 2452\n",
+      "false normals: 8341\n",
+      "true normals: 1370\n",
+      "precision: 0.8089301020805735\n",
+      "recall: 0.5544813588291849\n",
+      "f1-score: 0.6579622880684518\n",
+      "Building forest with hyperparameters c1 = 1.3, c2 = 0.8\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.3110932491233235\n",
+      "true anomalies: 11094\n",
+      "false anomalies: 1739\n",
+      "false normals: 7460\n",
+      "true normals: 2251\n",
+      "precision: 0.8644899867529027\n",
+      "recall: 0.5979303654198556\n",
+      "f1-score: 0.7069168764138019\n",
+      "Building forest with hyperparameters c1 = 1.3, c2 = 0.7\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.32836249442984\n",
+      "true anomalies: 10656\n",
+      "false anomalies: 2177\n",
+      "false normals: 8091\n",
+      "true normals: 1620\n",
+      "precision: 0.830359230109873\n",
+      "recall: 0.5684109457513202\n",
+      "f1-score: 0.6748575047498416\n",
+      "Building forest with hyperparameters c1 = 1.3, c2 = 0.6\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.34095724880909\n",
+      "true anomalies: 10910\n",
+      "false anomalies: 1923\n",
+      "false normals: 7649\n",
+      "true normals: 2062\n",
+      "precision: 0.8501519519987533\n",
+      "recall: 0.5878549490813083\n",
+      "f1-score: 0.6950815494393476\n",
+      "Building forest with hyperparameters c1 = 1.4, c2 = 1.0\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.29224642537275286\n",
+      "true anomalies: 9996\n",
+      "false anomalies: 2837\n",
+      "false normals: 5063\n",
+      "true normals: 4648\n",
+      "precision: 0.7789293228395543\n",
+      "recall: 0.6637890962215287\n",
+      "f1-score: 0.716764663702854\n",
+      "Building forest with hyperparameters c1 = 1.4, c2 = 0.9\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.2931513895082383\n",
+      "true anomalies: 9361\n",
+      "false anomalies: 3472\n",
+      "false normals: 8875\n",
+      "true normals: 836\n",
+      "precision: 0.7294475181173536\n",
+      "recall: 0.513325290633911\n",
+      "f1-score: 0.6025942257555763\n",
+      "Building forest with hyperparameters c1 = 1.4, c2 = 0.8\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.2933909601385699\n",
+      "true anomalies: 12396\n",
+      "false anomalies: 437\n",
+      "false normals: 2199\n",
+      "true normals: 7512\n",
+      "precision: 0.9659471674588951\n",
+      "recall: 0.8493319630010278\n",
+      "f1-score: 0.9038938311214818\n",
+      "Building forest with hyperparameters c1 = 1.4, c2 = 0.7\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.2994301350559892\n",
+      "true anomalies: 10728\n",
+      "false anomalies: 2105\n",
+      "false normals: 7879\n",
+      "true normals: 1832\n",
+      "precision: 0.8359697654484533\n",
+      "recall: 0.5765572096522814\n",
+      "f1-score: 0.6824427480916031\n",
+      "Building forest with hyperparameters c1 = 1.4, c2 = 0.6\n",
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.31229334898694766\n",
+      "true anomalies: 10936\n",
+      "false anomalies: 1897\n",
+      "false normals: 7859\n",
+      "true normals: 1852\n",
+      "precision: 0.8521779786487961\n",
+      "recall: 0.5818568768289438\n",
+      "f1-score: 0.6915391425319337\n",
+      "(1.0, 1.0, 0.9998441517961506, 0.9996104705515737, 0.9997272975184074)\n",
+      "(1.0, 0.9, 0.968518662822411, 0.7288026269496892, 0.8317328604409944)\n",
+      "(1.0, 0.8, 1.0, 1.0, 1.0)\n",
+      "(1.0, 0.7, 0.8032416426400686, 0.559761064349715, 0.6597542242703535)\n",
+      "(1.0, 0.6, 0.9202057196290813, 0.6877293110476967, 0.7871617117717639)\n",
+      "(1.1, 1.0, 0.8785942492012779, 0.6443961822026633, 0.7434882954170787)\n",
+      "(1.1, 0.9, 0.8795293384243746, 0.6269858904566159, 0.7320901572887952)\n",
+      "(1.1, 0.8, 0.9422582404737785, 0.6660791010245676, 0.7804563203924226)\n",
+      "(1.1, 0.7, 0.9481804722200576, 0.6924652856817665, 0.8003946719289591)\n",
+      "(1.1, 0.6, 0.9825450011688616, 0.7628872216844144, 0.8588944518238479)\n",
+      "(1.2, 1.0, 0.8789838697109016, 0.6100264993780758, 0.7202145319882518)\n",
+      "(1.2, 0.9, 0.8733733343723213, 0.6120576671035387, 0.7197302937871248)\n",
+      "(1.2, 0.8, 0.9169329073482428, 0.6439203239575353, 0.7565499726749607)\n",
+      "(1.2, 0.7, 0.9225434426868231, 0.6563730110328768, 0.7670229996760608)\n",
+      "(1.2, 0.6, 0.9307254733889192, 0.6722197208464655, 0.7806280840495409)\n",
+      "(1.3, 1.0, 0.9032961895114159, 0.7007193374841323, 0.7892156862745099)\n",
+      "(1.3, 0.9, 0.8089301020805735, 0.5544813588291849, 0.6579622880684518)\n",
+      "(1.3, 0.8, 0.8644899867529027, 0.5979303654198556, 0.7069168764138019)\n",
+      "(1.3, 0.7, 0.830359230109873, 0.5684109457513202, 0.6748575047498416)\n",
+      "(1.3, 0.6, 0.8501519519987533, 0.5878549490813083, 0.6950815494393476)\n",
+      "(1.4, 1.0, 0.7789293228395543, 0.6637890962215287, 0.716764663702854)\n",
+      "(1.4, 0.9, 0.7294475181173536, 0.513325290633911, 0.6025942257555763)\n",
+      "(1.4, 0.8, 0.9659471674588951, 0.8493319630010278, 0.9038938311214818)\n",
+      "(1.4, 0.7, 0.8359697654484533, 0.5765572096522814, 0.6824427480916031)\n",
+      "(1.4, 0.6, 0.8521779786487961, 0.5818568768289438, 0.6915391425319337)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def testc1c2(c1, c2, result_data):\n",
+    "    print(\"Building forest with hyperparameters c1 = \" + str(c1) + \", c2 = \" + str(c2))\n",
+    "    automodel = FBIsolationForest(c1 = c1, c2 = c2, random_state = None)\n",
+    "    automodel.fit(X_train, train_labels)\n",
+    "    print(\"Threshold: \" + str(automodel.threshold))\n",
+    "    autopredictions = automodel.predict(X_test)\n",
+    "    autopredictions['is_normal'] = test_labels\n",
+    "    TA, FA, FN, TN = return_results(autopredictions)\n",
+    "    precision, recall, f1 = calc_f1(TA, FA, FN, TN)\n",
+    "    result_data.append((c1, c2, precision, recall, f1))\n",
+    "    print_by_result(TA, FA, FN, TN, precision, recall, f1)\n",
+    "\n",
+    "c_vals = [(c1, c2) for c1 in [1.0, 1.1, 1.2, 1.3, 1.4] for c2 in [1.0, 0.9, 0.8, 0.7, 0.6]]\n",
+    "\n",
+    "result_data = []\n",
+    "for c1, c2 in c_vals:\n",
+    "    testc1c2(c1, c2, result_data)\n",
+    "\n",
+    "for result in result_data:\n",
+    "    print(result)"
    ]
   },
   {
