minor forest notebook updates
includes 8 hours of FBIF run output

 Changes to be committed:
	modified:   .gitignore
	modified:   test_EIF.ipynb
	modified:   test_EIF_auto.ipynb
	modified:   test_FBIF.ipynb
	modified:   test_FBIF_auto.ipynb
	modified:   test_IF_auto.ipynb
	modified:   test_IsolationForest.ipynb
	modified:   test_SCiF_auto.ipynb

--- a/test_EIF.ipynb
+++ b/test_EIF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -18,414 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>flag_OTH</th>\n",
-       "      <th>flag_REJ</th>\n",
-       "      <th>flag_RSTO</th>\n",
-       "      <th>flag_RSTOS0</th>\n",
-       "      <th>flag_RSTR</th>\n",
-       "      <th>flag_S0</th>\n",
-       "      <th>flag_S1</th>\n",
-       "      <th>flag_S2</th>\n",
-       "      <th>flag_S3</th>\n",
-       "      <th>flag_SF</th>\n",
-       "      <th>...</th>\n",
-       "      <th>dst_host_srv_count</th>\n",
-       "      <th>dst_host_same_srv_rate</th>\n",
-       "      <th>dst_host_diff_srv_rate</th>\n",
-       "      <th>dst_host_same_src_port_rate</th>\n",
-       "      <th>dst_host_srv_diff_host_rate</th>\n",
-       "      <th>dst_host_serror_rate</th>\n",
-       "      <th>dst_host_srv_serror_rate</th>\n",
-       "      <th>dst_host_rerror_rate</th>\n",
-       "      <th>dst_host_srv_rerror_rate</th>\n",
-       "      <th>class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>86</td>\n",
-       "      <td>0.61</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.61</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>57</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>86</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22539</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>141</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22540</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>255</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22541</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>255</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22542</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>252</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22543</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.44</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>22544 rows × 47 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       flag_OTH  flag_REJ  flag_RSTO  flag_RSTOS0  flag_RSTR  flag_S0  \\\n",
-       "0           0.0       1.0        0.0          0.0        0.0      0.0   \n",
-       "1           0.0       1.0        0.0          0.0        0.0      0.0   \n",
-       "2           0.0       0.0        0.0          0.0        0.0      0.0   \n",
-       "3           0.0       0.0        0.0          0.0        0.0      0.0   \n",
-       "4           0.0       0.0        1.0          0.0        0.0      0.0   \n",
-       "...         ...       ...        ...          ...        ...      ...   \n",
-       "22539       0.0       0.0        0.0          0.0        0.0      0.0   \n",
-       "22540       0.0       0.0        0.0          0.0        0.0      0.0   \n",
-       "22541       0.0       0.0        0.0          0.0        0.0      0.0   \n",
-       "22542       0.0       0.0        0.0          0.0        0.0      0.0   \n",
-       "22543       0.0       1.0        0.0          0.0        0.0      0.0   \n",
-       "\n",
-       "       flag_S1  flag_S2  flag_S3  flag_SF  ...  dst_host_srv_count  \\\n",
-       "0          0.0      0.0      0.0      0.0  ...                  10   \n",
-       "1          0.0      0.0      0.0      0.0  ...                   1   \n",
-       "2          0.0      0.0      0.0      1.0  ...                  86   \n",
-       "3          0.0      0.0      0.0      1.0  ...                  57   \n",
-       "4          0.0      0.0      0.0      0.0  ...                  86   \n",
-       "...        ...      ...      ...      ...  ...                 ...   \n",
-       "22539      0.0      0.0      0.0      1.0  ...                 141   \n",
-       "22540      0.0      0.0      0.0      1.0  ...                 255   \n",
-       "22541      0.0      0.0      0.0      1.0  ...                 255   \n",
-       "22542      0.0      0.0      0.0      1.0  ...                 252   \n",
-       "22543      0.0      0.0      0.0      0.0  ...                  21   \n",
-       "\n",
-       "       dst_host_same_srv_rate  dst_host_diff_srv_rate  \\\n",
-       "0                        0.04                    0.06   \n",
-       "1                        0.00                    0.06   \n",
-       "2                        0.61                    0.04   \n",
-       "3                        1.00                    0.00   \n",
-       "4                        0.31                    0.17   \n",
-       "...                       ...                     ...   \n",
-       "22539                    0.72                    0.06   \n",
-       "22540                    1.00                    0.00   \n",
-       "22541                    1.00                    0.00   \n",
-       "22542                    0.99                    0.01   \n",
-       "22543                    0.08                    0.03   \n",
-       "\n",
-       "       dst_host_same_src_port_rate  dst_host_srv_diff_host_rate  \\\n",
-       "0                             0.00                         0.00   \n",
-       "1                             0.00                         0.00   \n",
-       "2                             0.61                         0.02   \n",
-       "3                             1.00                         0.28   \n",
-       "4                             0.03                         0.02   \n",
-       "...                            ...                          ...   \n",
-       "22539                         0.01                         0.01   \n",
-       "22540                         0.01                         0.01   \n",
-       "22541                         0.00                         0.00   \n",
-       "22542                         0.00                         0.00   \n",
-       "22543                         0.00                         0.00   \n",
-       "\n",
-       "       dst_host_serror_rate  dst_host_srv_serror_rate  dst_host_rerror_rate  \\\n",
-       "0                      0.00                       0.0                  1.00   \n",
-       "1                      0.00                       0.0                  1.00   \n",
-       "2                      0.00                       0.0                  0.00   \n",
-       "3                      0.00                       0.0                  0.00   \n",
-       "4                      0.00                       0.0                  0.83   \n",
-       "...                     ...                       ...                   ...   \n",
-       "22539                  0.01                       0.0                  0.00   \n",
-       "22540                  0.01                       0.0                  0.00   \n",
-       "22541                  0.00                       0.0                  0.07   \n",
-       "22542                  0.00                       0.0                  0.00   \n",
-       "22543                  0.00                       0.0                  0.44   \n",
-       "\n",
-       "       dst_host_srv_rerror_rate  class  \n",
-       "0                          1.00      0  \n",
-       "1                          1.00      0  \n",
-       "2                          0.00      1  \n",
-       "3                          0.00      0  \n",
-       "4                          0.71      0  \n",
-       "...                         ...    ...  \n",
-       "22539                      0.00      1  \n",
-       "22540                      0.00      1  \n",
-       "22541                      0.07      0  \n",
-       "22542                      0.00      1  \n",
-       "22543                      1.00      0  \n",
-       "\n",
-       "[22544 rows x 47 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataframe = pd.read_csv(\"./eda_simple_classification/network_data_mod_train.csv\", index_col=0)\n",
     "test_dataframe = pd.read_csv(\"./eda_simple_classification/network_data_mod_test.csv\", index_col=0)\n",
@@ -434,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -447,24 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.4654171925730117"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "contamination = sum(train_labels == 0) / len(train_labels)\n",
     "contamination"
@@ -472,31 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Threshold: 0.4012869932627152\n",
-      "true anomalies: 9862\n",
-      "false anomalies: 2971\n",
-      "false normals: 8777\n",
-      "true normals: 934\n",
-      "precision: 0.7684874931816411\n",
-      "recall: 0.5291056387145233\n",
-      "f1-score: 0.626715810879512\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = ExtendedIsolationForest(contamination = contamination, random_state = None)\n",
     "model.fit(X_train, train_labels)\n",
     "print(\"Threshold: \" + str(model.threshold))\n",
-    "predictions = model.predict(X_test)\n",
+    "print(\"\\nTraining set results:\")\n",
+    "train_predictions = model.train_scores\n",
+    "train_predictions['is_normal'] = train_labels\n",
+    "print_results(train_predictions)\n",
+    "print(\"\\nTest set results:\")\n",
+    "predictions = automodel.predict(X_test)\n",
     "predictions['is_normal'] = test_labels\n",
-    "print_results(predictions)"
+    "print_results(predictions)\n",
+    "print(\"\\n\")"
    ]
   },
   {
