--- a/test_FBIF.ipynb
+++ b/test_FBIF.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, train_labels, test_labels = preprocess_features(train_dataframe, test_dataframe)"
+    "X_train, X_test, train_labels, test_labels = standard_preprocess_features(train_dataframe, test_dataframe)"
    ]
   },
   {
