--- a/test_IsolationForest.ipynb
+++ b/test_IsolationForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -422,7 +422,7 @@
        "[125973 rows x 47 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -458,7 +458,7 @@
        "0.4654171925730117"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -482,14 +482,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threshold: 0.4013211456295411\n",
-      "true anomalies: 9430\n",
-      "false anomalies: 3403\n",
-      "false normals: 8296\n",
-      "true normals: 1415\n",
-      "precision: 0.7348242811501597\n",
-      "recall: 0.531986911880853\n",
-      "f1-score: 0.6171667921070717\n"
+      "Finished building forest\n",
+      "Finished calculating threshold\n",
+      "Threshold: 0.40589391174665485\n",
+      "true anomalies: 9474\n",
+      "false anomalies: 3359\n",
+      "false normals: 8855\n",
+      "true normals: 856\n",
+      "precision: 0.7382529416348477\n",
+      "recall: 0.5168858093731246\n",
+      "f1-score: 0.6080482639111738\n"
      ]
     }
    ],
@@ -497,9 +499,15 @@
     "model = IsolationForest(contamination = contamination, random_state = None)\n",
     "model.fit(X_train, train_labels)\n",
     "print(\"Threshold: \" + str(model.threshold))\n",
+    "print(\"\\nTraining set results:\")\n",
+    "train_predictions = model.train_scores\n",
+    "train_predictions['is_normal'] = train_labels\n",
+    "print_results(train_predictions)\n",
+    "print(\"\\nTraining set results:\")\n",
     "predictions = model.predict(X_test)\n",
     "predictions['is_normal'] = test_labels\n",
-    "print_results(predictions)"
+    "print_results(predictions)\n",
+    "print(\"\\n\")"
    ]
   },
   {
@@ -512,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -524,28 +532,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "true anomalies: 44287\n",
-      "false anomalies: 14343\n",
-      "false normals: 53139\n",
-      "true normals: 14204\n",
-      "precision: 0.7553641480470749\n",
-      "recall: 0.4545706484921889\n",
-      "f1-score: 0.5675783052237658\n"
+      "true anomalies: 55010\n",
+      "false anomalies: 3620\n",
+      "false normals: 59375\n",
+      "true normals: 7968\n",
+      "precision: 0.9382568650861334\n",
+      "recall: 0.4809197010097478\n",
+      "f1-score: 0.6358986215068059\n"
      ]
     }
    ],
-   "source": [
-    "train_predictions = model.predict(X_train)\n",
-    "train_predictions['is_normal'] = train_labels\n",
-    "print_results(train_predictions)"
-   ]
+   "source": []
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Best training set f1 so far: 0.60"
+    "training set f1 for corresponding best test f1 so far: 0.60"
    ]
   },
   {
