--- a/test_SCiF_auto.ipynb
+++ b/test_SCiF_auto.ipynb
@@ -430,7 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, train_labels, test_labels = preprocess_features(train_dataframe, test_dataframe)"
+    "X_train, X_test, train_labels, test_labels = standard_preprocess_features(train_dataframe, test_dataframe)"
    ]
   },
   {
